--- a/templates/app/service/add.hbs
+++ b/templates/app/service/add.hbs
@@ -91,7 +91,7 @@
 <h4>ServiceNow role</h4>
 <form>
 <table>
-<tr><td><b>Role Name : </b></td><td><input type = "text" id = "name"></td></tr>
+<tr><td><b>Role Name : </b></td><td><input type = "text" id = "addrolename"></td></tr>
 <tr><td><b>Role Description : </b></td><td><input type = "text" id = "description"></td></tr>
 <button type = "submit" {{action "get"}}>submit role</button>
 </table>
